codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_narrow.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(params, 78)"
---

  Keymap
  All configurable shortcuts.
  88 actions, 0 customized, 2 unbound.

  [All]  Common  Customized (0)  Unbound (2)  App  Composer  Editor  Vim
  Navigation  Approval  Debug

  Type to search shortcuts
› Global         Open Transcript            ctrl-t
  Global         Open External Editor       ctrl-g
  Global         Copy                       ctrl-o
  Global         Clear Terminal             ctrl-l
  Global       - Toggle Vim Mode            unbound
  Global         Toggle Raw Output          alt-r
  Chat           Decrease Reasoning Effort  alt-,
  Chat           Increase Reasoning Effort  alt-.

  left/right group · enter edit shortcut · * custom · - unbound · esc close
